Fixed some layout problems and add a rainbow feature

--- a/style.css
+++ b/style.css
@@ -36,6 +36,13 @@ button:hover{
     background-color: #ef233c;
     color: #780000;
     border-color: #780000;
+    transform: scale(1.1);
+}
+
+button.active{
+    background-color: #ef233c;
+    color: #780000;
+    border-color: #780000;
 }
 
 .title{
@@ -48,7 +55,7 @@ button:hover{
 
 .main{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     margin: 1.5em 50px;
 }
@@ -76,11 +83,16 @@ button:hover{
     cursor: pointer;
     display: block;
     margin : 0 auto;
+    transition: all 0.5s ease;
 }
 
 #colorPicker::-webkit-color-swatch{
     border-radius: 10px;
     border: 3px solid #ef233c;
+}
+
+#colorPicker:hover{
+    transform: scale(1.1);
 }
 
 #sizeSlider {
@@ -124,12 +136,13 @@ button:hover{
 
 .grid {
     display: grid;
-    width: 550px;
-    height: 550px;
+    width: 650px;
+    height: 650px;
     border: 1px transparent solid;
     border-radius: 10px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-left: 2em;
 }
 
 .grid-item {
